--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link
       rel="shortcut icon"
-      href="assets/images/Barao.png"
+      href="./assets/images/Barao.png"
       type="image/x-icon"
     />
     <meta name="description" content="" />
@@ -23,21 +23,21 @@
     <title>Barão Marmitaria</title>
     <link
       rel="stylesheet"
-      href="assets/web/assets/mobirise-icons2/mobirise2.css"
+      href="./assets/web/assets/mobirise-icons2/mobirise2.css"
     />
     <link
       rel="stylesheet"
-      href="assets/web/assets/mobirise-icons/mobirise-icons.css"
+      href="./assets/web/assets/mobirise-icons/mobirise-icons.css"
     />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" />
     <link
       rel="stylesheet"
-      href="assets/bootstrap/css/bootstrap-reboot.min.css"
+      href="./assets/bootstrap/css/bootstrap-reboot.min.css"
     />
-    <link rel="stylesheet" href="assets/dropdown/css/style.css" />
-    <link rel="stylesheet" href="assets/socicon/css/styles.css" />
-    <link rel="stylesheet" href="assets/theme/css/style.css" />
+    <link rel="stylesheet" href="./assets/dropdown/css/style.css" />
+    <link rel="stylesheet" href="./assets/socicon/css/styles.css" />
+    <link rel="stylesheet" href="./assets/theme/css/style.css" />
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css?family=Parisienne:400&display=swap"
@@ -69,11 +69,11 @@
     <link
       rel="preload"
       as="style"
-      href="assets/mobirise/css/mbr-additional.css"
+      href="./assets/mobirise/css/mbr-additional.css"
     />
     <link
       rel="stylesheet"
-      href="assets/mobirise/css/mbr-additional.css"
+      href="./assets/mobirise/css/mbr-additional.css"
       type="text/css"
     />
   </head>
@@ -90,7 +90,7 @@
             <span class="navbar-logo">
               <a href="https://mobiri.se">
                 <img
-                  src="assets/images/Barao.png"
+                  src="./assets/images/Barao.png"
                   alt="Mobirise Website Builder"
                   style="height: 3.8rem"
                 />
@@ -456,7 +456,7 @@
               <div class="col-12 col-md-2">
                 <div class="image-wrapper">
                   <img
-                    src="assets/images/media.png"
+                    src="./assets/images/media.png"
                     alt="Mobirise Website Builder"
                     title=""
                   />
@@ -535,7 +535,7 @@
               <div class="col-12 col-md-2">
                 <div class="image-wrapper">
                   <img
-                    src="assets/images/240636808-539662324042799-8551221007002755340-n-596x596.jpeg"
+                    src="./assets/images/240636808-539662324042799-8551221007002755340-n-596x596.jpeg"
                     alt="Mobirise Website Builder"
                     title=""
                   />
@@ -672,10 +672,10 @@
         Free Web Site Software</a
       >
     </section>
-    <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/smoothscroll/smooth-scroll.js"></script>
-    <script src="assets/ytplayer/index.js"></script>
-    <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-    <script src="assets/theme/js/script.js"></script>
+    <script src="./assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/smoothscroll/smooth-scroll.js"></script>
+    <script src="./assets/ytplayer/index.js"></script>
+    <script src="./assets/dropdown/js/navbar-dropdown.js"></script>
+    <script src="./assets/theme/js/script.js"></script>
   </body>
 </html>
